--- a/examples/example_7dq2.html
+++ b/examples/example_7dq2.html
@@ -11775,7 +11775,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Example-usage-of-surfinBH-package.">Example usage of surfinBH package.<a class="anchor-link" href="#Example-usage-of-surfinBH-package.">&#182;</a></h1>
+<h1 id="Example-usage-of-surfinBH7dq2-fit.">Example usage of surfinBH7dq2 fit.<a class="anchor-link" href="#Example-usage-of-surfinBH7dq2-fit.">&#182;</a></h1>
 </div>
 </div>
 </div>
